pcs9685.py pases unit test

--- a/servo_cal.yaml
+++ b/servo_cal.yaml
@@ -5,25 +5,25 @@
   intercept: -180.0
   name: servo0
   points:
-  - &id001 !!python/tuple
+  - &id001
     - 1000.0
     - 0.0
-  - &id002 !!python/tuple
+  - &id002
     - 1500.0
     - 90.0
-  - &id003 !!python/tuple
+  - &id003
     - 2000.0
     - 180.0
   rvalue: 1.0
   slope: 0.5
   valid fit: true
 1:
-  active: false
+  active: true
   angle lower limit: 0.0
   angle upper limit: 180.0
   intercept: -180.0
-  name: servo1
-  points: &id004
+  name: servo1 1
+  points:
   - *id001
   - *id002
   - *id003
@@ -35,18 +35,24 @@
   angle lower limit: 0.0
   angle upper limit: 180.0
   intercept: -180.0
-  name: servo2
-  points: *id004
+  name: servo2 2
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
 3:
-  active: true
+  active: false
   angle lower limit: 0.0
   angle upper limit: 180.0
   intercept: -180.0
   name: servo3
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
@@ -56,7 +62,10 @@
   angle upper limit: 180.0
   intercept: -180.0
   name: servo4
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
@@ -66,7 +75,10 @@
   angle upper limit: 180.0
   intercept: -180.0
   name: servo5
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
@@ -76,17 +88,23 @@
   angle upper limit: 180.0
   intercept: -180.0
   name: servo6
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
 7:
-  active: true
+  active: false
   angle lower limit: 0.0
   angle upper limit: 180.0
   intercept: -180.0
   name: servo7
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
@@ -96,7 +114,10 @@
   angle upper limit: 180.0
   intercept: -180.0
   name: servo8
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
@@ -106,7 +127,10 @@
   angle upper limit: 180.0
   intercept: -180.0
   name: servo9
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
@@ -116,17 +140,23 @@
   angle upper limit: 180.0
   intercept: -180.0
   name: servo10
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
 11:
-  active: true
+  active: false
   angle lower limit: 0.0
   angle upper limit: 180.0
   intercept: -180.0
   name: servo11
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
@@ -136,7 +166,10 @@
   angle upper limit: 180.0
   intercept: -180.0
   name: servo12
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
@@ -146,7 +179,10 @@
   angle upper limit: 180.0
   intercept: -180.0
   name: servo13
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
@@ -156,17 +192,23 @@
   angle upper limit: 180.0
   intercept: -180.0
   name: servo14
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
 15:
-  active: true
+  active: false
   angle lower limit: 0.0
   angle upper limit: 180.0
   intercept: -180.0
   name: servo15
-  points: *id004
+  points:
+  - *id001
+  - *id002
+  - *id003
   rvalue: 1.0
   slope: 0.5
   valid fit: true
